--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Redux Electron IPC Middleware",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register",
     "lint": "./node_modules/.bin/eslint .",
-    "build": "WEBPACK_ENV=production ./node_modules/.bin/webpack",
+    "build": "./node_modules/.bin/webpack && WEBPACK_ENV=production ./node_modules/.bin/webpack",
     "dev": "./node_modules/.bin/webpack --watch"
   },
   "keywords": [
@@ -30,7 +30,12 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
     "eslint": "^2.11.1",
+    "mocha": "^2.5.3",
+    "proxyquire": "^1.7.9",
+    "redux": "^3.5.2",
     "webpack": "^1.13.1"
   }
 }
