--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register",
     "lint": "./node_modules/.bin/eslint .",
-    "build": "./node_modules/.bin/webpack && WEBPACK_ENV=production ./node_modules/.bin/webpack",
+    "build": "./node_modules/.bin/webpack && cross-env WEBPACK_ENV=production ./node_modules/.bin/webpack",
     "dev": "./node_modules/.bin/webpack --watch"
   },
   "keywords": [
@@ -32,10 +32,12 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "cross-env": "^2.0.1",
     "eslint": "^2.11.1",
     "mocha": "^2.5.3",
     "proxyquire": "^1.7.9",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.1"
   }
 }
