--- a/example/package.json
+++ b/example/package.json
@@ -3,12 +3,13 @@
   "main": "main.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "./node_modules/.bin/webpack ./app/app.js && electron ."
+    "start": "./node_modules/.bin/webpack ./app/app.js && ./node_modules/.bin/electron ."
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "electron-prebuilt": "^1.4.1",
     "html-webpack-plugin": "^2.19.0",
     "redux": "^3.5.2",
     "webpack": "^1.13.1"
