--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 script:
 - npm run lint
 - npm run build
-- npm run test
+- npm run test-coveralls
 cache:
   directories:
   - example/node_modules
