--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Redux Electron IPC Middleware",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register",
-    "lint": "./node_modules/.bin/eslint .",
-    "build": "./node_modules/.bin/webpack && cross-env WEBPACK_ENV=production ./node_modules/.bin/webpack",
-    "dev": "./node_modules/.bin/webpack --watch"
+    "test": "mocha",
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -x 'example/**/*.js' -- test/*.js",
+    "test-coveralls": "istanbul cover node_modules/mocha/bin/_mocha -x 'example/**/*.js' --report lcovonly -- test/*.js && cat ./coverage/lcov.info | coveralls --verbose && rm -rf ./coverage",
+    "lint": "eslint .",
+    "build": "webpack && cross-env WEBPACK_ENV=production webpack",
+    "dev": "webpack --watch"
   },
   "keywords": [
     "redux",
@@ -26,15 +28,18 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "cross-env": "^2.0.1",
-    "eslint": "^2.11.1",
-    "mocha": "^2.5.3",
+    "coveralls": "^2.11.15",
+    "cross-env": "^3.1.3",
+    "eslint": "^3.12.2",
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.2.0",
     "proxyquire": "^1.7.9",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
