(setup) Include files via package.json instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "webpack && cross-env WEBPACK_ENV=production webpack",
     "dev": "webpack --watch"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "redux",
     "electron",
