--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Redux Electron IPC Middleware",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -x 'example/**/*.js' -- test/*.js",
-    "test-coveralls": "istanbul cover node_modules/mocha/bin/_mocha -x 'example/**/*.js' --report lcovonly -- test/*.js && cat ./coverage/lcov.info | coveralls --verbose && rm -rf ./coverage",
+    "test": "nyc mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint .",
     "build": "webpack && cross-env WEBPACK_ENV=production webpack",
     "dev": "webpack --watch"
@@ -30,22 +29,21 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.15",
-    "cross-env": "^3.1.3",
-    "eslint": "^3.12.2",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
-    "proxyquire": "^1.7.9",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.1",
+    "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
+    "proxyquire": "^2.0.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^1.13.1"
   }
 }
